@@ -347,7 +347,7 @@ public class IspwRestApiRequest extends Builder {
 		String cesIspwToken = RestApiUtils.getCesToken(credentialsId);
 
 		if (RestApiUtils.isIspwDebugMode())
-			logger.println("...ces.url=" + cesUrl + ", ces.ispw.host=" + cesIspwHost
+			logger.println("CES Url=" + cesUrl + ", ces.ispw.host=" + cesIspwHost
 					+ ", ces.ispw.token=" + cesIspwToken);
 
 		IspwRequestBean ispwRequestBean =
@@ -422,14 +422,14 @@ public class IspwRestApiRequest extends Builder {
 						set.add(setState);
 
 						if (setState.equals(Constants.SET_STATE_CLOSED) || setState.equals(Constants.SET_STATE_COMPLETE)) {
-							logger.println("...action " + ispwAction + " completed");
+							logger.println("Action " + ispwAction + " completed");
 							break;
 						}
 					}
 				}
 
 				if (i == 60) {
-					logger.println("...warn - max timeout reached");
+					logger.println("Warn - max timeout reached");
 				}
 			}
 		}
