@@ -16,5 +16,6 @@ GetReleaseTaskGenerateListing
 GetReleaseTaskInfo
 PromoteRelease
 GetSetInfoAction
+GetSetTaskList
 </pre>
 </div>
