@@ -525,3 +525,30 @@ Example:
 </tbody>
 </table>
 </div>
+<!--GetSetTaskList-->
+<br>
+<strong>GetSetTaskList action:</strong>
+<br>
+Required:
+<table border="1">
+<tbody>
+<tr>
+<td>setId</td>
+<td>The set ID you want info on</td>
+</tr>
+</tbody>
+</table>
+Example:
+<table border="1">
+<tbody>
+<tr>
+<td>GetSetTaskList</td>
+</tr>
+<tr>
+<td>
+<pre>setId=S000015218</pre>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
